# vibe-coding-env

./: .dockerignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
graders/: code_quality.py  grader.py  usability.py  visual.py
server/: app.py  environment.py  requirements.txt
tasks/: task_definitions.py
tasks/task_1_todo_html/: hints.txt  requirement.txt
tasks/task_1_todo_html/skeleton/: index.html
tasks/task_2_auth_express/: requirement.txt
tasks/task_2_auth_express/skeleton/: package.json  server.js
tasks/task_2_auth_fastapi/: hints.txt  requirement.txt  requirements.txt
tasks/task_2_auth_fastapi/skeleton/: main.py
tasks/task_3_notes_express/: hints.txt  requirement.txt
tasks/task_3_notes_express/skeleton/: package.json  server.js
